# bitranox_template_py_cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  Makefile  README.md  SECURITY.md  btxmake  pyproject.toml
.github/workflows/: ci.yml  default_cicd_public.yml
docs/adr/: 0001-memory-adapters-in-src.md
docs/systemdesign/: module_reference.md
notebooks/: Quickstart.ipynb
packaging/brew/Formula/: bitranox-template-py-cli.rb
packaging/conda/recipe/: meta.yaml
packaging/nix/: flake.nix
scripts/: _metadata.py  _utils.py  bump_version.py  clean.py  cli.py  dependencies.py  push.py  refractor.md  refractor.py  release.py  target_metadata.py  test.py  toml_config.py
src/bitranox_template_py_cli/: __init__.py  __init__conf__.py  __main__.py  behaviors.py  bitranox_template_py_cli.py  cli.py
src/bitranox_template_py_cli/adapters/: __init__.py
src/bitranox_template_py_cli/adapters/cli/: __init__.py  constants.py  context.py  main.py  root.py  traceback.py
src/bitranox_template_py_cli/adapters/cli/commands/: __init__.py  config.py  email.py  info.py
src/bitranox_template_py_cli/adapters/cli/commands/email/: _common.py
src/bitranox_template_py_cli/adapters/config/: __init__.py  defaultconfig.toml  deploy.py  display.py  loader.py  overrides.py  permissions.py
src/bitranox_template_py_cli/adapters/config/defaultconfig.d/: 40-layered-config.toml  50-mail.toml  90-logging.toml
src/bitranox_template_py_cli/adapters/email/: __init__.py  sender.py  transport.py  validation.py
src/bitranox_template_py_cli/adapters/logging/: setup.py
src/bitranox_template_py_cli/adapters/memory/: __init__.py  config.py  email.py
src/bitranox_template_py_cli/adapters/output/: __init__.py  stdout.py
src/bitranox_template_py_cli/application/: __init__.py  ports.py
src/bitranox_template_py_cli/application/ports/: __init__.py  output.py
src/bitranox_template_py_cli/application/use_cases/: __init__.py  failure.py  greeting.py  info.py
src/bitranox_template_py_cli/composition/: __init__.py  container.py
src/bitranox_template_py_cli/defaultconfig.d/: 50-mail.toml  90-logging.toml
src/bitranox_template_py_cli/domain/: __init__.py  behaviors.py  errors.py  greeting.py
tests/: conftest.py  test_basic.py  test_behaviors.py  test_cache_effectiveness.py  test_cli.py  test_cli_config.py  test_cli_core.py  test_cli_email.py  test_cli_env_file.py  test_cli_exit_codes.py  test_cli_overrides.py  test_cli_smtp_unit.py  test_cli_validation.py  test_config_overrides.py  test_deploy.py  test_deploy_permissions.py  test_display.py  test_enums.py  test_errors.py  test_exit_codes.py  test_logging.py  test_mail.py  test_metadata.py  test_metadata_sync.py  test_module_entry.py  test_ports.py  test_property_email.py  test_property_overrides.py  test_scripts.py
