[project]
name = "bitranox_template_cli_app_config_log_mail"
version = "1.1.0"
description = "Template CLI application with configuration management and structured logging"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich-click>=1.9.6",
    "lib_cli_exit_tools>=2.2.4",
    "lib_log_rich>=6.3.0",
    "lib_layered_config>=5.3.0",
    "btx_lib_mail>=1.2.0",
    "pydantic>=2.12.5",
    "orjson>=3.11.5",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["cli", "template", "config", "logging", "layered-config", "rich-click"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bitranox/bitranox_template_cli_app_config_log_mail"
Repository = "https://github.com/bitranox/bitranox_template_cli_app_config_log_mail.git"
Issues = "https://github.com/bitranox/bitranox_template_cli_app_config_log_mail/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.14",
  "pyright[nodejs]>=1.1.408",
  "bandit>=1.9.3",
  "build>=1.4.0",
  "twine>=6.2.0",
  "codecov-cli>=11.2.6",
  "pip-audit>=2.10.0",
  "textual>=7.4.0",
  "import-linter>=2.9",
  "rtoml>=0.13.0",
  "httpx>=0.28.1",
  # Transitive CVE pins
  "jaraco-context>=6.1.0",       # CVE-2026-23949
  "python-multipart>=0.0.22",    # CVE-2026-24486
  "wheel>=0.46.3",               # CVE-2026-24049
  "pynacl>=1.6.2",               # CVE-2025-69277
  "urllib3>=2.6.3",              # CVE-2026-21441
  "virtualenv>=20.36.1",         # CVE-2026-22702
]

[project.scripts]
bitranox_template_cli_app_config_log_mail = "bitranox_template_cli_app_config_log_mail.adapters.cli:main"
bitranox-template-cli-app-config-log-mail = "bitranox_template_cli_app_config_log_mail.adapters.cli:main"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/bitranox_template_cli_app_config_log_mail"]
include = ["src/bitranox_template_cli_app_config_log_mail/py.typed", "src/bitranox_template_cli_app_config_log_mail/adapters/config/defaultconfig.toml"]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]
exclude = [
  "scripts/menu.py",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
  "slow: slow integration tests requiring external resources (skipped in CI)",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/bitranox_template_cli_app_config_log_mail"]

[tool.coverage.report]
omit = [
  "tests/*",
]
fail_under = 85
show_missing = true

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.clean]
# Patterns to remove when running `make clean` or `python -m scripts clean`
patterns = [
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"


[tool.scripts.test]
# Configuration for scripts/test.py test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"
[tool.importlinter]
root_package = "bitranox_template_cli_app_config_log_mail"
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Domain is pure (no adapter dependencies)"
type = "forbidden"
source_modules = [
  "bitranox_template_cli_app_config_log_mail.domain",
]
forbidden_modules = [
  "bitranox_template_cli_app_config_log_mail.adapters",
  "bitranox_template_cli_app_config_log_mail.composition",
]

[[tool.importlinter.contracts]]
name = "Clean Architecture layers"
type = "layers"
layers = [
  # Composition wires adapters - can import everything
  "bitranox_template_cli_app_config_log_mail.composition",
  # Adapters implement ports - can import application and domain
  "bitranox_template_cli_app_config_log_mail.adapters",
  # Application defines ports - can import domain
  "bitranox_template_cli_app_config_log_mail.application",
  # Domain is pure - bottom layer
  "bitranox_template_cli_app_config_log_mail.domain",
]

[tool.pip-audit]
# Known vulnerabilities to ignore (environment-level packages, not project dependencies)
# PYSEC-2022-42969: py library ReDoS — py 1.11.0 is installed in the development
#   environment but is not a dependency of this project; no fix available.
ignore-vulns = [
  "PYSEC-2022-42969",
]
